Legg til foto og cards

--- a/content/tema/det-store-utland/index.mdx
+++ b/content/tema/det-store-utland/index.mdx
@@ -27,8 +27,13 @@ import { Card, Cards } from '@/components/card'
 
 <ContentGrid>
 
-{/* <Cards title="Historier om fisk">
-  <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
-</Cards> */}
-
+<Cards title="Historier om Verden i Bergen">
+ <Card 
+    title="Museets første gjenstand?" 
+    description="En modell av kinesisk pagode." 
+    image="/images/det-store-utland/E8500.jpg" 
+    imageAlt="Foto av en modell av en kinesisk pagode. I sju etasjer. Brun. Laget av tre." 
+    href="https://tohundrefortellinger.w.uib.no/1825/09/26/1827-en-kinesisk-pagode/" 
+  />
+</Cards>
 </ContentGrid>
