--- a/content/tema/dyr/nordspisshvalen.mdx
+++ b/content/tema/dyr/nordspisshvalen.mdx
@@ -13,6 +13,16 @@ keywords:
 # Nordspisshvalen
 ## En bildereise fra hagen til museet
 
+![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-01.jpg)
+
+![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-02.jpg)
+
+![Nordspisshval](/images/dyr/ubb-ms-1478-2-001.jpg)
+
+![Nordspisshval](/images/dyr/ubb-ms-1478-2-002.jpg)
+
+![Nordspisshval](/images/dyr/ubb-bgm-bok-1904-01.jpg)
+
 <Figure image="/images/dyr/ubb-bgm-nordspisshval-01.jpg" alt="Hval på vogn" width={1000} height={1000} />
 
 <Figure image="/images/dyr/ubb-bgm-nordspisshval-02.jpg" alt="Hvalfigur på museet" width={1000} height={1000} />
