--- a/content/tema/dyr/nordspisshvalen.mdx
+++ b/content/tema/dyr/nordspisshvalen.mdx
@@ -14,23 +14,17 @@ keywords:
 ## En bildereise fra hagen til museet
 
 ![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-01.jpg)
-
-![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-02.jpg)
+Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
 
 ![Nordspisshval](/images/dyr/ubb-ms-1478-2-001.jpg)
+Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+
+![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-02.jpg)
+Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
 
 ![Nordspisshval](/images/dyr/ubb-ms-1478-2-002.jpg)
+Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
 
 ![Nordspisshval](/images/dyr/ubb-bgm-bok-1904-01.jpg)
-
-<Figure image="/images/dyr/ubb-bgm-nordspisshval-01.jpg" alt="Hval på vogn" width={1000} height={1000} />
-
-<Figure image="/images/dyr/ubb-bgm-nordspisshval-02.jpg" alt="Hvalfigur på museet" width={1000} height={1000} />
-
-<Figure image="/images/dyr/ubb-ms-1478-2-001.jpg" alt="Hvaltegning" width={1000} height={1000} />
-
-<Figure image="/images/dyr/ubb-ms-1478-2-002.jpg" alt="Hvaltegning" width={1000} height={1000} />
-
-<Figure image="/images/dyr/dyr/ubb-bgm-bok-1904-01.jpg" alt="Hvaltegning i museumsårboken" width={1000} height={1000} />
-
+Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.
 </ContentGrid>
