--- a/content/tema/dyr/bucher-og-blaakvalen.mdx
+++ b/content/tema/dyr/bucher-og-blaakvalen.mdx
@@ -11,13 +11,31 @@ keywords:
 
 <ContentGrid>
 
+![Blåhval](/images/dyr/ubb-ms-2310.jpg)
+Blåhval tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+
 # Bucher og blåkvalen
-Ein av dei vakraste og mest kjende illustrasjonane i samlingane ved Universitetsbiblioteket er den store blåkvalen teikna av Henrich Bucher jr. Kvalen, (mål), har fått rett slektsnamn, Baleoenoptera, men artsnamnet «sibbaldii» blei seinare bytta ut med Carl von Linnés opphavlege «musculus». Det var den norske zoologen Georg Ossian Sars som i 1875 laga artsnamnet «sibbaldii».  
+Ein av dei vakraste og mest kjende illustrasjonane i samlingane ved Universitetsbiblioteket er den store blåkvalen teikna av Henrich Bucher jr. Kvalen, har fått rett slektsnamn, Baleoenoptera, men artsnamnet «sibbaldii» blei seinare bytta ut med Carl von Linnés opphavlege «musculus». Det var den norske zoologen Georg Ossian Sars som i 1875 laga artsnamnet «sibbaldii».  
 
 Bucher (1854-1932) arbeidde som meir eller mindre fast tilsett illustratør ved Bergens Museum i nærmare 40 år, og var i tillegg teiknelærar ved fleire skular i Bergen. Far til Henrich, Henrich Peter Bucher, etablerte ein litografisk verkstad i Bergen i 1845, og fekk eit nært samarbeid med Bergens Museum. M.a. trykka han det banebrytande lepra-plansjeverket til seinare museumsdirektør D.C. Danielssen, C.W. Boeck, og målaren og litografen Johan Ludvig Losting i 1847.  
 
 Henrich jr. arbeidde som litograf hos faren i fleire år, før han blei hyra inn som teiknar og illustratør på museet ved fleire høve allereie i 1880-åra. I samlingane våre er det mengder av illustrasjonar og spor etter Bucher, og han tok alle utfordringar på strak arm og med stø hand, både innanfor arkeologi, geologi og zoologi. Han laga alt frå ørsmå detaljrike teikningar av mikroskopiske marine dyr til svære geologiske veggplansjar og kval-illustrasjonar, alt på særs høgt kunstnarisk nivå. Bucher illustrerte gjennom fleire tiår artiklane til James Grieg, både om kvalar og meir obskure marine dyr. Grieg publiserte i 1893 eit kapittel i bind 5 av dei vitskaplege rapportane frå den norske Nordhavsekspedisjonen 1876-1878, om slangestjerner (Ophiuroidea). Bucher bidrog med tre praktfulle heilsides plansjar, fleire av originalteikningane er i samlingane våre. Detaljnivået på dei små originalteikningane er imponerande, små utsnitt av slangestjerner skapt med finslipt blyant, før originalane blei litograferte til like så imponerande plansjar. 
 
 Bucher pensjonerte seg i 1924, og  forsvann dermed (og dessverre) også ut av historia til institusjonen, ein delvis gløymd skikkelse i museumshistoria, som no i 200-års jubileet fortener å bli løfta fram frå arkiva våre.   
+
+
+<Work iiifContent="https://api.ub.uib.no/items/ubb-bs-ok-00067?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      «The-pause paa Griegs kontor april 1921». Fra venstre: James Grieg, Henrich Bucher jr., Anton Mohr Wiesener. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/photograph/ubb-bs-ok-00067.html">
+      Se bildet i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
+![Sjøstjerne](/images/dyr/ubb-ms-1478-2-003.jpg)
+Slangestjerner, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
 
 </ContentGrid>
