Update card content in 'verden-i-bergen' section: replaced existing card with new information about a model of a Chinese pagoda.

--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -69,25 +69,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     href="https://samisksamling.w.uib.no/" 
   />
    <Card 
-    title="Om Bergens Glarmesterlaug" 
-    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
-  />
-   <Card 
-    title="Om Bergens Glarmesterlaug" 
-    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
-  />
-   <Card 
-    title="Om Bergens Glarmesterlaug" 
-    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
+    title="Museets første gjenstand?" 
+    description="En modell av kinesisk pagode." 
+    image="/images/det-store-utland/E8500.jpg" 
+    imageAlt="Foto av en modell av en kinesisk pagode. I sju etasjer. Brun. Laget av tre." 
+    href="https://tohundrefortellinger.w.uib.no/1825/09/26/1827-en-kinesisk-pagode/" 
   />
 </Cards>
 
