--- a/content/tema/dyr/bucher-og-blaakvalen.mdx
+++ b/content/tema/dyr/bucher-og-blaakvalen.mdx
@@ -12,7 +12,7 @@ keywords:
 <ContentGrid>
 
 ![Blåhval](/images/dyr/ubb-ms-2310.jpg)
-Blåhval tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+*Blåhval tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
 
 # Bucher og blåkvalen
 Ein av dei vakraste og mest kjende illustrasjonane i samlingane ved Universitetsbiblioteket er den store blåkvalen teikna av Henrich Bucher jr. Kvalen, har fått rett slektsnamn, Baleoenoptera, men artsnamnet «sibbaldii» blei seinare bytta ut med Carl von Linnés opphavlege «musculus». Det var den norske zoologen Georg Ossian Sars som i 1875 laga artsnamnet «sibbaldii».  
@@ -36,6 +36,6 @@ Bucher pensjonerte seg i 1924, og  forsvann dermed (og dessverre) også ut av hi
 </Work>
 
 ![Sjøstjerne](/images/dyr/ubb-ms-1478-2-003.jpg)
-Slangestjerner, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+*Slangestjerner, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
 
 </ContentGrid>
