--- a/content/tema/dyr/nordspisshvalen.mdx
+++ b/content/tema/dyr/nordspisshvalen.mdx
@@ -14,21 +14,20 @@ keywords:
 ## En bildereise fra hagen til museet
 
 ![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-01.jpg)
-Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+*Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.*
 
 
 ![Nordspisshval](/images/dyr/ubb-ms-1478-2-002.jpg)
-Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
-
+*Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
 
 ![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-02.jpg)
-Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+*Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.*
 
 
 ![Nordspisshval](/images/dyr/ubb-ms-1478-2-001.jpg)
-Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+*Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
 
 
 ![Nordspisshval](/images/dyr/ubb-bgm-bok-1904-01.jpg)
-Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.
+*Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.*
 </ContentGrid>
