--- a/content/tema/dyr/james-grieg.mdx
+++ b/content/tema/dyr/james-grieg.mdx
@@ -9,6 +9,9 @@ keywords:
 ---
 
 <ContentGrid>
+![Portrett av James Grieg](/images/dyr/ubb-bs-fol-01796.jpg)
+*Portrett av James Grieg. Utsnitt. Fotograf: Atelier KK. Universitetsbiblioteket i Bergen.*
+
 
 # James Alexanderssøn Grieg
 Mannen med det staselige navnet og det intense blikket, James Alexanderssøn Grieg (1861-1936), jobbet som konservator på Bergens Museum i 46 år, men er på ymse vis fremdeles en mytisk tilstedeværende figur her på Nygårdshøyden, ikke minst som en til tider høylytt åndelig vokter av Spesialsamlingens magasiner.
@@ -17,9 +20,27 @@ Før Griegs død i 1936, testamenterte han skjelettet sitt til Bergens Museum, s
 
 Historien om skjelettet til James er nok en sannhet med solide modifikasjoner. Riktignok testamenterte han det til museet, men om det noensinne ble utstilt i monter ved museet er en svært omdiskutert sak, og ingen vet med sikkerhet i dag om skjelettet faktisk befinner seg ved museet. Uansett, mytene florerer,  det har gjennom årene blitt publisert atskillige artikler om Grieg som «spøkelse», og han har med de egenskapene til og med blitt brukt som gjennomgangsfigur i en av UBs informasjonsfilmer. Høydepunktet, eller kanskje lavmålet, kom da ukebladet Se og Hør for noen år siden sendte et bergensk «medium» ut på kveldsvandring i Naturhistorisk museum, for å endelig «gi ham fred». Ikke rart at James flyktet over til Spesialsamlingens gemakker.
 
+<Work iiifContent="https://api.ub.uib.no/items/ubb-bs-q-00072?as=iiif">
+  <Work.Content>
+    <Work.Description>
+       James Grieg i laboratoriet på Bergens Museum. Fotograf: Johan von der Fehr. Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/photograph/ubb-bs-q-00072.html">
+      Se bildet i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
 Midt i denne uklassifiserte floraen av myter og vandrehistorier er det lett å glemme at James var en dyktig forsker og populær formidler. Han startet å jobbe på museet sammen med Fridtjof Nansen og D.C. Danielssen i 1885, og gjennom 46 år som konservator hadde han ansvaret for samlingene av både virveldyr og de virvelløse dyrene. Han holdt en mengde populærvitenskapelige foredrag, der han overveldet tilhørerne med sin intense bruk av latinske navn og begrep; han publiserte over 100 artikler i tidsskriftet «Naturen», i tillegg til mer enn 75 vitenskapelige artikler i museets årbøker og i andre publikasjoner. Den faglige spennvidden hans var enorm, men han hadde en særlig forkjærlighet for hvaler, og samarbeidet tett med museets eminente tegner, Henrich Bucher jr., om illustrasjoner til alle artiklene og arbeidene sine.
 
+![Menykort](/images/dyr/ubb-romertall-box-xxx-gri-01.jpg)
+*«Spiseseddel ved festen hos dr. Schetelig, 3.1.1911 i anledning av konservator J.A. Griegs jubilæum». Universitetsbiblioteket i Bergen.*
+
+
 James var tydeligvis svært populær blant kollegaene sine ved museet, bl.a. ble 50-årsdagen og 25-års jubileet som ansatt feiret med en middag med spesiallaget spiseseddel. Og til 70-årsdagen i 1931 ble det produsert et eget festskrift til James, en svært så uhøytidelig og tidstypisk spesialutgave av tidsskriftet «Naturen». James er på sett og vis fortsatt populær her ved Spesialsamlingen, det er lett å skylde på ham hvis ting ikke fungerer, eller når smått overtroiske ansatte opplever uforklarlige bevegelser og lyder nede i dypet i kjellermagasinene våre.
+
+![Festskrift av Naturen](/images/dyr/naturen-festskrift.jpg)
+*Spesialutgave av tidsskriftet «Naturen», desember 1931. Uhøytidelig festskrift til James Griegs 70-årsdag. Universitetsbiblioteket i Bergen.*
 
 
 *Teksten er tidligere publisert i På Høyden 23.12.2022.*
