--- a/content/tema/fisk/thorholv-rasmussen.mdx
+++ b/content/tema/fisk/thorholv-rasmussen.mdx
@@ -9,6 +9,9 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
+![Fisk tegnet av Rasmussen](/images/dyr/um-rasmussen.jpg)
+*Rød skorpionfisk, tegnet av Thorolv Rasmussen, 1910. Universitetsmuseet i Bergen.*
+
 
 # Thorolv Rasmussen
 
