--- a/content/tema/fisk/peter-stuwitz.mdx
+++ b/content/tema/fisk/peter-stuwitz.mdx
@@ -9,7 +9,8 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
-
+![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-001.jpg)
+*Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
 
 # Peter Stuwitz
 
@@ -17,6 +18,7 @@ Peter Stuwitz ble født i Bergen i 1806, og ble fra svært ung alder interessert
 
 Stuwitz etterlot seg store mengder vitenskapelig arkivmateriale og samlinger. Ved Universitetsbiblioteket er det bevart dagbøker, brev, notatbøker, og ikke minst skissebøker og illustrasjoner av fisker, sjødyr, sommerfugler og insekter. Deler av den zoologiske samlingen til Stuwitz ble bevart på Bergens Museum.
 
-
+![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-001.jpg)
+*Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
 
 </ContentGrid>
