--- a/content/tema/fisk/thorholv-rasmussen.mdx
+++ b/content/tema/fisk/thorholv-rasmussen.mdx
@@ -9,7 +9,8 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
-
+![Fisk tegnet av Rasmussen](/images/fisk/um-rasmussen.jpg)
+*Rød skorpionfisk, tegnet av Thorolv Rasmussen, 1910. Universitetsmuseet i Bergen.*
 
 # Thorolv Rasmussen
 
