bilder og cards stein

--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -37,25 +37,33 @@ Allerede før han grunnla Bergens Museum i 1825 hadde W.F.K. Christie samlet inn
 Forskningen til geologene ved museet og senere UiB har generert store mengder arkivmateriale, særlig feltbøker, fotografier, illustrasjoner, og håndtegnede og trykte geologiske kart. Ved Universitetsbiblioteket er det bevart ca. 170 håndskrevne feltbøker, samt en mengde maskinskrevne feltbøker med fotografier. Det er bevart fotosamlinger etter flere av geologene som brukte fotografi aktivt i feltarbeidet, og det er bevart en unik samling med over 750 fargerike og håndtegnede geologiske undervisningsplansjer, de aller fleste laget av illustratører ved museet. 
 
 <Cards id="historier" title="Historier om stein" className="full pt-10 md:pt-20">
+
+<Card 
+    title="Geologi og dokumentasjon i bilder" 
+    description="Geologisk forskning i bilder." 
+    image="/nav-card-images/ubb-korallfossil-icon.jpg" 
+    imageAlt="Korallfossil" 
+    href="/tema/stein/visuell-geologi" 
+  />
   <Card 
     title="Geologi og folkeliv i Hardanger" 
     description="Les om Geologi og folkeliv i Hardanger" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/nav-card-images/ubb-ms-2093-i-03-0101-icon.jpg" 
+    imageAlt="Feltbok" 
     href="/tema/stein/geologi-og-folkeliv-i-hardanger" 
   />
   <Card 
     title="Astrid Monsen – En kvinnelig pioner ved Bergens Museum" 
     description="Les om Astrid Monsen – En kvinnelig pioner ved Bergens Museum" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/nav-card-images/ubb-ms-2093-t-02-12-04-047-icon.jpg" 
+    imageAlt="Geologisk snitt" 
     href="/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum" 
   />
   <Card 
     title="Geologiske undervisningsplansjer" 
     description="Les om Geologiske undervisningsplansjer" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/nav-card-images/ubb-ms-2267-v-c-008-icon.jpg" 
+    imageAlt="Plansje med tegning av granitt" 
     href="/tema/stein/geologiske-undervisningsplansjer" 
   />
 </Cards>
