--- a/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
+++ b/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
@@ -11,6 +11,9 @@ keywords:
 ---
 
 <ContentGrid>
+![Feltbok](/images/stein/ubb-ms-2093-i-03-0101.jpg)
+*Illustrasjon fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Illustrasjon fra Ljono i Ulvik, 3. juli 1877. Universitetsbiblioteket i Bergen.*
+
 
 # Geologi og folkeliv i Hardanger
 
@@ -19,8 +22,6 @@ I regnvåte sommermåneder i 1877 og 1878 reiste cand. real. Thomas Christian Th
 ## Hva vi snakker om når vi snakker om feltbøker
 Naturvitenskapelige feltbøker er en hybrid genre, uten faste krav til struktur eller innhold, men som regel med faste innslag med dokumentasjon av observasjoner, målinger og data, ofte illustrert med tegninger og skisser. I tillegg inneholder ofte feltbøker personlige kommentarer, tanker, innfall og utbrudd som krydrer feltbøkene og gjør dem mer lesbare og fascinerende. Feltbøkene gjenspeiler metodene og prosessene i selve feltarbeidet, og de gjenspeiler ikke minst personligheten til forskeren.
 
-> Fra Thomassens feltbok fra 1877, illustrasjon fra Ljono i Ulvik, 3. juli 1877.
-
 Uansett utforming, feltbøker er et viktig verktøy i innsamling og dokumentasjon i feltarbeid på ulike fagfelt, og er uvurderlige primærkilder for vitenskapelige og historiske oppdagelser og data. I mange tilfeller har også feltarbeidet satt svært synlige spor i feltbøkene, spor etter bruk og spor etter livet i felten: blekkflekker og kaffesøl, fingeravtrykk, flatklemte fluer, drodlerier og marginalia, fragmenter av vitenskapelige funn, fuglefjær, blad og blomster. Slike bruksspor er det mange eksempler på i feltbok-samlingene ved Spesialsamlingene, der det foreløpig er innsamlet ca. 450 håndskrevne feltbøker.
 
 ## Ryddegutt på Bergens Museum
@@ -28,12 +29,23 @@ Den geologiske feltbok-samlingen som er bevart ved Spesialsamlingene er både om
 
 Thomassen var 1888-1890 konstituert i Fridtjof Nansens stilling som konservator ved Bergens Museum, mens Nansen vandret over innlandsisen på Grønland. I disse to årene startet Thomassen en storstilt opprydding i museets usorterte og ukatalogiserte samlinger av bergarter, mineraler og fossiler; en opprydding og systematisering som ble utgangspunktet for den mer formelle etableringen av Mineralogisk-geologisk avdeling ved museet i slutten av 1890-årene. Thomassen var også svært aktiv i tidsskriftet Naturen, utgitt av Bergens Museum; han publiserte 16 artikler i perioden 1877-1896.
 
-> Portrett av Thomas Christian Thomassen (1849-1897), hentet fra jubileumsboka til Bergens Museum fra 1925.
+![Portrett av Thomas Christian Thomassen](/images/stein/ubb-ms-2093-t-001-022.jpg)
+*Portrett av Thomas Christian Thomassen (1849-1897), hentet fra jubileumsboka til Bergens Museum fra 1925. Fotograf ukjent. Universitetsbiblioteket i Bergen. Universitetsbiblioteket i Bergen.*
+
 
 ## Geologiske strabaser
 Feltbøkene fra 1877 og 1878 ble laget under Thomassens feltarbeid i Hardanger, på oppdrag for NGU. Han reiste vidt og bredt og høyt i Hardanger-landskapet, med fokus på Folgefonnhalvøya, med avstikkere til Ulvik og Granvin og Øystese, og korte pustepauser i Bergen. Hovedinnholdet i feltbøkene er naturlig nok kartlegging av bergartene i Hardanger, og feltarbeidet fra det første året ble publisert i Nyt Magazin for Naturvidenskaberne i 1877, «Geologiske Undersøgelser paa Folgefons Halvø».
 
-> Utstilling av bergarter, mineraler og fossiler i kjelleren på Bergens Museum 1890; resultatet av Thomassens ryddejobb i de kaotiske geologiske samlingene. Bildet er hentet fra jubileumsboka til Bergens Museum fra 1925.
+<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-n-374-067?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      Utstilling av bergarter, mineraler og fossiler i kjelleren på Bergens Museum 1890; resultatet av Thomassens ryddejobb i de kaotiske geologiske samlingene. Bildet er hentet fra jubileumsboka til Bergens Museum fra 1925. Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/photograph/ubb-kk-n-374-067.html">
+      Se bildet i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
 
 Thomassen var tydeligvis særdeles uheldig med været under reisene i Hardanger, og han bruker mye plass i feltbøkene på å skildre strabasene sine, som her fra 30. juni 1877:
 
@@ -50,16 +62,35 @@ På grunn av svært dårlig vær («Storm og Regn. Dette behøver jeg snart ikke
 
 «Paa Samland var der meget trist. Folket er tungt og trægt, superreligiøst (..) Jeg overvar Slutningen af en Husandagt. Han. Ole, var Forsanger og i en ynkelig skrigende og snøvlende Tone skreg han. Dette var nu saa, men under sangen saa han paa skraa hen paa mig gjentagne Gange. Dette sjælende Blik havde noget infamt ræveagtigt ved sig, at det paa mig gjorde et ganske forfærdeligt Indtryk».
 
-> Fra turen fra fjellet Jonstein ned til Samland, lørdag 27. juli 1878. Fra Thomassens feltbok.
+
+![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-i-3-0027.jpg)
+*Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
+
+![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-i-3-0131.jpg)
+*Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
+
 
 Og når i tillegg maten «var den usleste jeg har kjendt» var lidelseshistorien komplett.
 
-> «Samland i Hardanger». Akvarell av Catherine Hermine Kølle, u.år. Akvarellen tilhører Universitetsmuseet i Bergen.
+
+![Akvarell malt av Catharina Kølle](/images/stein/ubb-ms-2093-i-3-0131.jpg)
+*Catharine Hermine Kølle: «Samland i Hardanger». Fotograf: Svein Skare. Universitetsmuseet i Bergen.*
+
 
 ## «Det Storartede og Skjønne i Naturen»
 Men alt var ikke kun lidelse og strabaser. Thomassen hadde et velutviklet blikk for naturen og landskapene i Hardanger, og skildret på tidstypisk vis «forfærdelige Afgrunde» og vakre fosser og utsikter i en og samme setning.
 
-> Folgefonna. Fotografi fra midten av 1860-årene av Knud Knudsen. Billedsamlingen, UBB.
+<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-ns-0214?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      Folgefonna. Fotografi fra midten av 1860-årene av Knud Knudsen. Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/photograph/ubb-kk-ns-0214.html">
+      Se bildet i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
 
 Den største opplevelsen i så måte var turen til Folgefonna 5. august 1877, «noget af det mest Storartede og imponerende jeg har seet, et mægtigt Syn». Like imponert var han selvsagt ikke over reisefølget sitt, som «ikke havde Spor af Øie for det Herlige, som viste sig for os», og som var mest opptatt å finne godt «Smalebeite». Utrolig nok var kirkesangeren fra Jondal med på turen til breen, og han fikk selvsagt gjennomgå av den lett arrogante student Thomassen:
 
@@ -69,8 +100,10 @@ Den mest unike naturopplevelsen fikk Thomassen under et strabasiøst forsøk på
 
 «Her fra Høiden saaes et ganske eiendommeligt Naturfænomen. Over Osafjorden var nemlig udspændt 4 over hinanden staaende Regnbuer. De tegnede sig dog ikke som Buer, men som horisontale Linier. Over Vossevangen rullede Tordenen».
 
-> Den spektakulære regnbuen, opplevd og fremstilt av Thomassen i feltboka 7. juli 1877.
+![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-i-3-0039.jpg)
+*Thomassens regnbue, fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
 
-Korte avsnitt i denne teksten har vært tidligere publisert i «Felthistorier» av Marianne Paasche og Ola Søndenå; Universitetsmuseets årbok 2018.
+
+*Korte avsnitt i denne teksten har vært tidligere publisert i «Felthistorier» av Marianne Paasche og Ola Søndenå; Universitetsmuseets årbok 2018.*
 
 </ContentGrid>
