--- a/content/tema/stein/geologiske-undervisningsplansjer.mdx
+++ b/content/tema/stein/geologiske-undervisningsplansjer.mdx
@@ -5,11 +5,14 @@ keywords:
   - geologi
   - natur
   - feltarbeid
-  - feltbok
-  - feltbøker
+  - undervisningsplansje
+  - plansjeverk
 ---
 
 <ContentGrid>
+![Undervisningsplansje av granitt](/images/stein/ubb-ms-2267-v-c-008.jpg)
+*«Intrusion av granit i gneis». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.*
+
 
 # Geologiske undervisningsplansjer
 
@@ -17,6 +20,12 @@ På Mineralogisk-geologisk avdeling på Bergens Museum var store undervisningspl
 
 Plansjene omfatter hele det faglige spekteret innen geologi, inndelt i 12 ulike klasser. Mange av dem er svært store, opptil et par meter lange, og alle bærer merker etter å ha vært opphengt i undervisningsrom eller i utstillinger.  
 
-Ved første blikk kan flere av motivene på plansjene også tolkes som abstrakte fargerike kunstverk. Og et lite utvalg av plansjene ble da også brukt i kunstutstillingen «(w)ord. Ebbe + Flow. Travelling exhibition» i 2021, et samarbeidsprosjekt mellom norske og skotske kunstnere. 
+Ved første blikk kan flere av motivene på plansjene også tolkes som abstrakte fargerike kunstverk. Og et lite utvalg av plansjene ble da også brukt i kunstutstillingen «(w)ord. Ebbe + Flow. Travelling exhibition» i 2021, et samarbeidsprosjekt mellom norske og skotske kunstnere.
+
+![Håndtegnet undervisningsplansje av geologisk profil](/images/stein/ubb-ms-2267-v-c-05.jpg)
+*«Profil Sundalskjøn-Hallingskarven». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.*
+
+![Håndtegnet undervisningsplansje av geologisk profil](/images/stein/ubb-ms-2267-vi-f-034.jpg)
+*«Tversnit af den norske kontinentalplatform». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.*
 
 </ContentGrid>
