--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -28,7 +28,7 @@ import { JumpToStories } from '@/components/jump-to-stories'
 
 <ContentGrid>
 
-Denne vakre korallfossilen, Reuschia aperta Kiær, er utstilt ved Universitetsmuseet i Bergen. Den ble funnet av fossilsamleren Olaf Hanssen i hans hjembygd Hegglandsdalen i Os. Hanssen avleverte mange tilsvarende fossiler fra Hegglandsdalen til Bergens Museum, og han deltok på feltarbeid som assistent til museets geologikonservator Astrid Monsen i 1920-årene. Et tilsvarende fossil fra Hegglandsdalen finnes på et fotografi i en av Monsens feltbøker fra Os, trolig fotografert av Monsen selv. 
+Den vakre korallfossilen Reuschia aperta Kiær, er utstilt ved Universitetsmuseet i Bergen. Den ble funnet av fossilsamleren Olaf Hanssen i hans hjembygd Hegglandsdalen i Os. Hanssen avleverte mange tilsvarende fossiler fra Hegglandsdalen til Bergens Museum, og han deltok på feltarbeid som assistent til museets geologikonservator Astrid Monsen i 1920-årene. Et tilsvarende fossil fra Hegglandsdalen finnes på et fotografi i en av Monsens feltbøker fra Os, trolig fotografert av Monsen selv. 
 
 <JumpToStories title="stein" />
 
