description på cards

--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -35,21 +35,21 @@ Foruten en mengde publiserte gamle plansjeverk med trykte fiskeillustrasjoner, f
 <Cards id="historier" title="Historier om fisk" className="full pt-10 md:pt-20">
   <Card 
     title="Christie og de «mærkelige Fiske»" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    description="Nysgjerrig naturforsker med vitenskapelig blikk og metode." 
     image="/nav-card-images/ubb-ms-0285-07-a-009-icon.jpg" 
     imageAlt="Fisk" 
     href="/tema/fisk/christie-og-de-maerkelige-fiske" 
   />
   <Card 
     title="Thorolv Rasmussen" 
-    description="Les mer om «fiskekunstneren»" 
+    description="Vitenskapsformidling fra dyphavet på høyt kunstnerisk nivå." 
     image="/nav-card-images/um-rasmussen-icon.jpg" 
     imageAlt="Fisk" 
     href="/tema/fisk/thorholv-rasmussen" 
   />
   <Card 
     title="Peter Stuwitz" 
-    description="Les om Peter Stuwitz' bidrag til museets historie." 
+    description="Produktiv forsker og illustratør i særklasse." 
     image="/nav-card-images/ubb-ms-0311-a-001-icon.jpg" 
     imageAlt="Fisk" 
     href="/tema/fisk/peter-stuwitz" 
