--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -39,29 +39,29 @@ Forskningen til geologene ved museet og senere UiB har generert store mengder ar
 <Cards id="historier" title="Historier om stein" className="full pt-10 md:pt-20">
 
 <Card 
-    title="Geologi og dokumentasjon i bilder" 
-    description="Geologisk forskning i bilder." 
+    title="Geologisk forskning i bilder" 
+    description="En visuell reise i geologisk forskning." 
     image="/nav-card-images/ubb-korallfossil-icon.jpg" 
     imageAlt="Korallfossil" 
     href="/tema/stein/visuell-geologi" 
   />
   <Card 
     title="Geologi og folkeliv i Hardanger" 
-    description="Les om Geologi og folkeliv i Hardanger" 
+    description="Geologiske undersøkelser av folkelivet i Hardanger." 
     image="/nav-card-images/ubb-ms-2093-i-03-0101-icon.jpg" 
     imageAlt="Feltbok" 
     href="/tema/stein/geologi-og-folkeliv-i-hardanger" 
   />
   <Card 
     title="Astrid Monsen – En kvinnelig pioner ved Bergens Museum" 
-    description="Les om Astrid Monsen – En kvinnelig pioner ved Bergens Museum" 
+    description="På feltarbeid med spade, tommestokk og kamera." 
     image="/nav-card-images/ubb-ms-2093-t-02-12-04-047-icon.jpg" 
     imageAlt="Geologisk snitt" 
     href="/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum" 
   />
   <Card 
     title="Geologiske undervisningsplansjer" 
-    description="Les om Geologiske undervisningsplansjer" 
+    description="Faglig og fargerik undervisning i stort format." 
     image="/nav-card-images/ubb-ms-2267-v-c-008-icon.jpg" 
     imageAlt="Plansje med tegning av granitt" 
     href="/tema/stein/geologiske-undervisningsplansjer" 
