ramme og bilder til vann is

--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -32,14 +32,39 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor consequat ut vix. Vivendum intellegat et qui, ei denique consequuntur vix. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Scripta periculis ei eam, te pro movet reformidans. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Et mazim recteque nam. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te.
 
 
-<Cards id="historier" title="Historier om vann, vær og vind" className="full pt-10 md:pt-20">
+<Cards id="historier" title="Historier om vann, vær og vind (og is)" className="full pt-10 md:pt-20">
   <Card 
-    title="Christie og de «mærkelige Fiske»" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    title="Vann, vær og vind (og is)»" 
+    description="Bilder og materiale fra forskning og fascinasjon." 
+    image="/nav-card-images/ubb-ms-2267-vi-e-021-icon.jpg" 
+    imageAlt="Kart" 
+    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
   />
+
+<Card 
+    title="Breforskning»" 
+    description="Fotografi som primærkilder til klima- og breforskning." 
+    image="/nav-card-images/ubb-kk-ns-0214-icon.jpg" 
+    imageAlt="Isbre" 
+    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
+  />
+
+<Card 
+    title="Nordhavsekspedisjonen»" 
+    description="Glimt fra en banebrytende forskningsekspedisjon." 
+    image="/nav-card-images/ubb-romertall-foliant-x-exp-1-001-icon.jpg" 
+    imageAlt="Tegning av ei skute" 
+    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
+  />
+
+<Card 
+    title="Herman Friele og fotografiet»" 
+    description="Fotografisk formidling av vitenskapelige funn." 
+    image="/nav-card-images/ubb-ms-0676-001-icon.jpg" 
+    imageAlt="Foto av snegler" 
+    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
+  />
+
 </Cards>
 
 </ContentGrid>
