--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -25,16 +25,19 @@ import { JumpToStories } from '@/components/jump-to-stories'
 </Hero>
 
 <ContentGrid>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Det spektakulære fotografiet av Bøyabreen i Fjærland ble fotografert av Knud Knudsen tidlig i 1870-årene, og er ett av ca. 400 brefotografier tatt av Knudsen i perioden 1860-1900, alle bevart ved Billedsamlingen på UBB. Knudsens, og senere fotografers brefotografier tatt i forbindelse med Bergens Museums bremålinger, er uvurderlig kildemateriale i dagens klimaforskning. De er et visuelt reservoar som dokumenterer og synliggjør langsiktige variasjoner og forandringer ved norske isbreer. 
 
 <JumpToStories title="vann-vaer-og-vind" />
 
-Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor consequat ut vix. Vivendum intellegat et qui, ei denique consequuntur vix. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Scripta periculis ei eam, te pro movet reformidans. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Et mazim recteque nam. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te.
+Vann, vær og vind (og is) var blant de viktigste forskningsområdene ved Bergens Museum, og er det fortsatt ved UiB i 2025. Ansatsen til denne bergenske forskningstradisjonen var Nordhavs-ekspedisjonen 1876-1878, en tverrfaglig ekspedisjon med utspring i Bergens Museum. Det svært omfattende prøvematerialet samlet inn i løpet av de tre ekspedisjonene ble utgangspunktet for videre forskning og utvikling av flere fagmiljøer, bl.a. gjennom Geofysisk institutt, etablert i 1917.
+
+Arkivmaterialet fra Nordhavsekspedisjonen bevart ved Universitetsbiblioteket er tilsvarende omfattende – dagbøker, feltbøker, illustrasjoner, brev og rapporter. Materialet gir et svært godt innblikk i det vitenskapelige arbeidet i de arktiske farvannene, og synliggjør samtidig dagliglivet og strabasene om bord på skipet «Vøringen», med fem-retters middager, daglige kveldssammenkomster med drinker og sang, og kronisk sjøsyke ekspedisjonsdeltagere.
+
 
 
 <Cards id="historier" title="Historier om vann, vær og vind (og is)" className="full pt-10 md:pt-20">
   <Card 
-    title="Vann, vær og vind (og is)»" 
+    title="Vann, vær og vind (og is)" 
     description="Bilder og materiale fra forskning og fascinasjon." 
     image="/nav-card-images/ubb-ms-2267-vi-e-021-icon.jpg" 
     imageAlt="Kart" 
@@ -42,27 +45,27 @@ Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor con
   />
 
 <Card 
-    title="Breforskning»" 
+    title="Breforskning" 
     description="Fotografi som primærkilder til klima- og breforskning." 
     image="/nav-card-images/ubb-kk-ns-0214-icon.jpg" 
     imageAlt="Isbre" 
-    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
+    href="/tema/vann-vaer-og-vind/breforskning" 
   />
 
 <Card 
-    title="Nordhavsekspedisjonen»" 
+    title="Nordhavsekspedisjonen" 
     description="Glimt fra en banebrytende forskningsekspedisjon." 
     image="/nav-card-images/ubb-romertall-foliant-x-exp-1-001-icon.jpg" 
     imageAlt="Tegning av ei skute" 
-    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
+    href="/tema/vann-vaer-og-vind/nordhavsekspedisjonen" 
   />
 
 <Card 
-    title="Herman Friele og fotografiet»" 
+    title="Herman Friele og fotografiet" 
     description="Fotografisk formidling av vitenskapelige funn." 
     image="/nav-card-images/ubb-ms-0676-001-icon.jpg" 
     imageAlt="Foto av snegler" 
-    href="/tema/vann-vaer-og-vind/vann-is-bilder" 
+    href="/tema/vann-vaer-og-vind/herman-friele-og-fotografiet" 
   />
 
 </Cards>
