--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -25,7 +25,7 @@ import { JumpToStories } from '@/components/jump-to-stories'
 </Hero>
 
 <ContentGrid>
-Det spektakulære fotografiet av Bøyabreen i Fjærland ble fotografert av Knud Knudsen tidlig i 1870-årene, og er ett av ca. 400 brefotografier tatt av Knudsen i perioden 1860-1900, alle bevart ved Billedsamlingen på UBB. Knudsens, og senere fotografers brefotografier tatt i forbindelse med Bergens Museums bremålinger, er uvurderlig kildemateriale i dagens klimaforskning. De er et visuelt reservoar som dokumenterer og synliggjør langsiktige variasjoner og forandringer ved norske isbreer. 
+Det <a href="https://marcus.uib.no/instance/photograph/ubb-kk-1318-1014.html">spektakulære fotografiet</a> av Bøyabreen i Fjærland ble fotografert av Knud Knudsen tidlig i 1870-årene, og er ett av ca. 400 brefotografier tatt av Knudsen i perioden 1860-1900, alle bevart ved Billedsamlingen på UBB. Knudsens, og senere fotografers brefotografier tatt i forbindelse med Bergens Museums bremålinger, er uvurderlig kildemateriale i dagens klimaforskning. De er et visuelt reservoar som dokumenterer og synliggjør langsiktige variasjoner og forandringer ved norske isbreer. 
 
 <JumpToStories title="vann-vaer-og-vind" />
 
@@ -38,7 +38,7 @@ Arkivmaterialet fra Nordhavsekspedisjonen bevart ved Universitetsbiblioteket er 
 <Cards id="historier" title="Historier om vann, vær og vind (og is)" className="full pt-10 md:pt-20">
   <Card 
     title="Vann, vær og vind (og is)" 
-    description="Bilder og materiale fra forskning og fascinasjon." 
+    description="Visuelle historier: fra Bøyabreen til Jan Mayen." 
     image="/nav-card-images/ubb-ms-2267-vi-e-021-icon.jpg" 
     imageAlt="Kart" 
     href="/tema/vann-vaer-og-vind/vann-is-bilder" 
