--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -36,32 +36,33 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
 
 <Cards id="historier" title="Historier om vekster" className="full pt-10 md:pt-20">
   <Card 
+    title="Reinrose og andre vekster" 
+    description="les mer" 
+    image="/nav-card-images/um_Bf_By_12027_01-icon.jpg" 
+    imageAlt="Akvarell av reinrose" 
+    href="" 
+  />
+    
+  <Card 
     title="Miranda Bødtker" 
     description="Les om Miranda Bødtker" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Vekster" 
+    image="/nav-card-images/ubb-ms-2093-t-02-12-04-047-icon.jpg" 
+    imageAlt="Portrett av Miranda Bødtker" 
     href="/tema/vekster/miranda-boedtker" 
   />
   <Card 
     title="Knut Fægri" 
     description="Les om Knut Fægri" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Vekster" 
+    image="/nav-card-images/ubb-ms-2196-a-01-012-icon.jpg" 
+    imageAlt="Blomster" 
     href="/tema/vekster/knut-faegri" 
   />
   <Card 
     title="Bokflora" 
     description="Les om Bokflora" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Vekster" 
+    image="/nav-card-images/ubb-romertall-oktav-iii-b-6 -sch-01-icon.jpg" 
+    imageAlt="Plante i bok" 
     href="/tema/vekster/bokflora" 
-  />
-  <Card 
-    title="Miranda Bødtkers akrareller" 
-    description="Les om Miranda Bødtkers akrareller" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Vekster" 
-    href="https://tohundrefortellinger.w.uib.no/2016/09/15/1999-miranda-bodtkers-akvareller/" 
   />
 </Cards>
 
