vekster kanskje ferdig

--- a/content/tema/vekster/miranda-boedtker.mdx
+++ b/content/tema/vekster/miranda-boedtker.mdx
@@ -10,6 +10,9 @@ keywords:
 ---
 
 <ContentGrid>
+![Foto av Miranda Bødtker](/images/vekster/ubb-ms-2093-t-02-15-04-07.jpg)
+*Miranda Bødtker, fotografert på Kalandseid i Fana 1943. Utsnitt. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.*
+
 
 # Miranda Bødtker
 
