--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -40,7 +40,7 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
     description="les mer" 
     image="/nav-card-images/um_Bf_By_12027_01-icon.jpg" 
     imageAlt="Akvarell av reinrose" 
-    href="" 
+    href="/tema/vekster/reinrose-vekster" 
   />
     
   <Card 
